@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-28T16:17:16Z",
+  "timestamp" : "2022-05-29T08:14:42Z",
   "count_outdated" : 302,
   "uniques_outdated" : 156,
   "count" : 328,
-  "uniques" : 175,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2022-05-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -53,6 +53,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-05-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
