@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-05-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
